[package]
name = "rust_tmpl"
version = "0.0.0"
edition = "2021"
authors = ["gcxfd <i@rmw.link>"]
license = "Apache-2.0"
description = ""
repository = "https://github.com/rmw-lib/rust_tmpl"
readme = "README.md"
keywords = ["rust_tmpl"]

[dependencies]

[dev-dependencies]
anyhow = "1.0.58"
criterion = "0.3.6"
rand = "0.8.5"

[profile.bench]
lto = true

[[bench]]
name = "main"
harness = false
